# periodic-lambda-app

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt
cdk/stacks/: api_stack.py
cdk_infra/: app.py  requirements.txt
cdk_infra/cdk_infra/: api_stack.py
periodic_lambda_app/: config.py  dependencies.py  main.py  schemas.py
periodic_lambda_app/management/: create_table.py
periodic_lambda_app/repositories/: base.py  dynamodb.py  in_memory.py
periodic_lambda_app/static/: index.html
