[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "periodic-lambda-app"
description = "Toy application for trying out running periodic tasks on AWS Lambda"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
version = "0.0.1"
dependencies = [
    "fastapi[all]",
    "mangum"
]

[project.optional-dependencies]
dev = [
    "aws-cdk-lib==2.84.0",
    "constructs>=10.0.0,<11.0.0",
    "black",
    "isort",
]
